--- a/Frontend/Verification_Ind_admin.html
+++ b/Frontend/Verification_Ind_admin.html
@@ -61,14 +61,16 @@
                 margin-top: 1rem !important;
             }
         }
-
         .message-card {
             text-align: center;
-            font-size: xx-large;
-            padding: 20px;
-            margin-top: 20px;
-            min-height: 1000px;
-            /* Set minimum height */
+            font-size: 2rem;
+            padding: 3rem; 
+            margin: 0 auto; 
+            min-height: 60vh;
+            display: flex;
+            flex-direction: column; 
+            justify-content: center; 
+            align-items: center; 
         }
     </style>
 </head>
