--- a/Frontend/accepted_donations_restaurant.html
+++ b/Frontend/accepted_donations_restaurant.html
@@ -183,9 +183,6 @@
     </nav>
     <!-- END nav -->
 
-    <!-- <p class="card-text">Latitude: ${donation.pickupLocation.geo_location.latitude}</p>
-    <p class="card-text">Longitude: ${donation.pickupLocation.geo_location.longitude}</p> -->
-
     <div id="foodTransactionsContainer" class="container" style="margin-top: 6rem">
         <!-- Food transactions will be dynamically inserted here -->
     </div>
@@ -285,7 +282,7 @@
             var confirmation = confirm('Are you sure you want to logout?');
             if (confirmation) {
                 localStorage.clear();
-                window.location.href = 'index.html'; // Redirect to the logout page
+                window.location.assign('index.html'); // Redirect to the logout page
             }
         });
     </script>
@@ -296,6 +293,7 @@
             const token = localStorage.getItem('authToken');
             if (!token) {
                 alert('Authorization token is missing. Please log in again.');
+                window.location.href = 'Login.html';
                 return;
             }
             try {
@@ -310,7 +308,12 @@
                     const data = await response.json();
                     createDonationCards(data);
                 }
-                // add condition for directing to guest/login page if token is expired.
+                else if(response.status == 401)
+                {
+                    localStorage.clear();
+                    alert('Unauthorised to access this route');
+                    window.location.href = 'Login.html';
+                }
                 else {
                     alert('Failed to fetch food transactions. Please try again later.');
                 }
@@ -344,8 +347,8 @@
                             <p class="card-text">Quantity: ${donation.quantity}</p>
                             <p class="card-text">Category: ${donation.foodtype}</p>
                             <p class="card-text">Packaged: ${donation.packaged ? 'Yes' : 'No'}</p>
-                            <p class="card-text">Pickup Address: ${donation.pickupLocation.address.address_line_1},
-                                ${donation.pickupLocation.address.address_line_2 || ''}, 
+                            <p class="card-text">Pickup Address: ${donation.pickupLocation.address.address_line_1}
+                                ${donation.pickupLocation.address.address_line_2 ? ', ' + donation.pickupLocation.address.address_line_2 : '' }, 
                                 ${donation.pickupLocation.address.city}</p>
                         </div>
                         <div class="col-md-6">
