--- a/Frontend/restaurant_main_2.html
+++ b/Frontend/restaurant_main_2.html
@@ -32,14 +32,16 @@
             background: #343a40 !important;
             top: 0;
         }
-
         .message-card {
             text-align: center;
-            font-size: xx-large;
-            padding: 20px;
-            margin-top: 20px;
-            min-height: 1000px;
-            /* Set minimum height */
+            font-size: 2rem;
+            padding: 3rem; 
+            margin: 0 auto; 
+            min-height: 60vh;
+            display: flex;
+            flex-direction: column; 
+            justify-content: center; 
+            align-items: center; 
         }
     </style>
 </head>
